<resources>
    <string name="app_name">MovieRater</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="language">Language</string>
    <string name="tamil">Tamil</string>
    <string name="malay">Malay</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="release_date">Release Date</string>
    <string name="not_suitable_for_all_audience">Not Suitable for all audience</string>
    <string name="violence">Violence</string>
    <string name="language_used">Language used</string>
    <string name="add_movie">Add Movie</string>
    <string name="enter_the_name_of_the_movie">Enter the name of the movie</string>
    <string name="enter_a_short_description_of_the_movie">Enter a short description of the movie</string>
    <string name="enter_release_date">Enter release date</string>
    <string name="title">Title:</string>
    <string name="venom">Venom</string>
    <string name="overview">overview:</string>
    <string name="when_eddie_brock_acquires_the_power_of_a_symbiote_he_will_have_to_release_his_alter_ego_venom_to_save_his_life">
        When Eddie Brock acquires the power of a symbiote, he will have to release his alter-ego Venom to save his life
    </string>
    <string name="language_details">Language:</string>
    <string name="release_date_details">Release Date:</string>
    <string name="_3_10_2018">3-10-2018</string>
    <string name="suitable_for_children_below_13">suitable for children below 13</string>
    <string name="yes">Yes</string>
    <string name="enter_your_review_for_the_movie">Enter your review for the movie:</string>
    <string name="share_your_view_on_the_show">Share your view on the show</string>
    <string name="review">Review:</string>
</resources>
