<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_camera"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
    <TextView
            android:id="@+id/detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"/>
    <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_details"/>
    <TextView
            android:id="@+id/detailLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date_details"/>
    <TextView
            android:id="@+id/detailReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suitable_for_children_below_13"/>
    <TextView
            android:id="@+id/detailSuitability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
/>

</LinearLayout>